--- a/src/ui/utils/Window/ui/Window.module.scss
+++ b/src/ui/utils/Window/ui/Window.module.scss
@@ -39,7 +39,7 @@
 
     overflow: auto;
 
-    padding: var(--uikit-padding-s);
+    margin: var(--uikit-margin-xs);
 }
 
 .opened {
